# scratchnet

./: .gitignore  NeuralNet.py  README.md  classifieur.py  entrainer_tester.ipynb  helpers.py  load_datasets.py  pyproject.toml
scrachnnet/: DecisionTree.py  NeuralNet.py  classifieur.py  entrainer_tester.ipynb  helpers.py  load_datasets.py  valid_nnet.py
