[tool.poetry]
name = "scrachnnet"
version = "0.1.0"
description = ""
authors = ["Konrad T. A. ALAHASSA <am.konrad21@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
validate = "scrachnnet.valid_nnet:main"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
